tests/snapshots/integration__license_chars-2.snap
---
source: tests/integration.rs
expression: m_counts
---
[
  (' ', 147),
  ('o', 49),
  ('t', 47),
  ('e', 46),
  ('i', 43),
  ('T', 39),
  ('O', 36),
  ('E', 35),
  ('I', 35),
  ('R', 34),
  ('s', 33),
  ('N', 30),
  ('n', 30),
  ('A', 28),
  ('S', 25),
  ('a', 25),
  ('r', 25),
  (',', 22),
  ('h', 20),
  ('H', 18),
  ('
', 16),
  ('c', 16),
  ('d', 16),
  ('l', 16),
  ('f', 15),
  ('L', 14),
  ('F', 12),
  ('u', 12),
  ('p', 11),
  ('C', 10),
  ('D', 10),
  ('w', 10),
  ('W', 9),
  ('b', 9),
  ('P', 8),
  ('U', 8),
  ('g', 8),
  ('m', 8),
  ('M', 7),
  ('G', 6),
  ('Y', 6),
  ('y', 6),
  ('B', 5),
  ('"', 4),
  ('.', 3),
  ('V', 2),
  ('(', 1),
  (')', 1),
  ('/', 1),
  (':', 1),
  ('K', 1),
  ('X', 1),
  ('j', 1),
  ('v', 1),
]
