tests/snapshots/integration__license_chars-3.snap
---
source: tests/integration.rs
expression: combined_counts
---
[
  (' ', 2662),
  ('e', 879),
  ('t', 789),
  ('o', 778),
  ('i', 772),
  ('n', 645),
  ('r', 612),
  ('a', 543),
  ('s', 483),
  ('h', 327),
  ('c', 324),
  ('d', 299),
  ('l', 275),
  ('u', 256),
  ('
', 216),
  ('f', 193),
  ('m', 172),
  ('p', 167),
  (',', 163),
  ('y', 158),
  ('b', 147),
  ('g', 130),
  ('w', 104),
  ('I', 75),
  ('v', 73),
  ('T', 72),
  ('O', 69),
  ('N', 67),
  ('L', 65),
  ('k', 65),
  ('.', 63),
  ('E', 61),
  ('S', 61),
  ('W', 61),
  ('A', 54),
  ('R', 53),
  ('C', 47),
  ('"', 44),
  ('D', 44),
  ('Y', 42),
  ('(', 24),
  (')', 24),
  ('H', 23),
  ('F', 22),
  ('x', 21),
  ('U', 18),
  ('P', 15),
  ('-', 11),
  ('M', 11),
  ('/', 10),
  ('B', 9),
  ('G', 9),
  ('j', 9),
  ('0', 6),
  (':', 6),
  (';', 6),
  ('q', 6),
  ('2', 5),
  ('V', 4),
  ('K', 3),
  ('[', 3),
  (']', 3),
  ('1', 2),
  ('4', 2),
  ('5', 2),
  ('9', 2),
  ('X', 2),
  ('z', 2),
  ('!', 1),
  ('%', 1),
  ('\'', 1),
  ('3', 1),
  ('6', 1),
  ('7', 1),
  ('8', 1),
  ('J', 1),
]
