tests/snapshots/integration__license_chars.snap
---
source: tests/integration.rs
expression: a_counts
---
[
  (' ', 2515),
  ('e', 833),
  ('t', 742),
  ('i', 729),
  ('o', 729),
  ('n', 615),
  ('r', 587),
  ('a', 518),
  ('s', 450),
  ('c', 308),
  ('h', 307),
  ('d', 283),
  ('l', 259),
  ('u', 244),
  ('
', 200),
  ('f', 178),
  ('m', 164),
  ('p', 156),
  ('y', 152),
  (',', 141),
  ('b', 138),
  ('g', 122),
  ('w', 94),
  ('v', 72),
  ('k', 65),
  ('.', 60),
  ('W', 52),
  ('L', 51),
  ('"', 40),
  ('I', 40),
  ('C', 37),
  ('N', 37),
  ('S', 36),
  ('Y', 36),
  ('D', 34),
  ('O', 33),
  ('T', 33),
  ('A', 26),
  ('E', 26),
  ('(', 23),
  (')', 23),
  ('x', 21),
  ('R', 19),
  ('-', 11),
  ('F', 10),
  ('U', 10),
  ('/', 9),
  ('j', 8),
  ('P', 7),
  ('0', 6),
  (';', 6),
  ('q', 6),
  ('2', 5),
  (':', 5),
  ('H', 5),
  ('B', 4),
  ('M', 4),
  ('G', 3),
  ('[', 3),
  (']', 3),
  ('1', 2),
  ('4', 2),
  ('5', 2),
  ('9', 2),
  ('K', 2),
  ('V', 2),
  ('z', 2),
  ('!', 1),
  ('%', 1),
  ('\'', 1),
  ('3', 1),
  ('6', 1),
  ('7', 1),
  ('8', 1),
  ('J', 1),
  ('X', 1),
]
