tests/snapshots/integration__serde-2.snap
---
source: tests/integration.rs
expression: m
---
{
  '
': 16,
  ' ': 147,
  '"': 4,
  '(': 1,
  ')': 1,
  ',': 22,
  '.': 3,
  '/': 1,
  ':': 1,
  'A': 28,
  'B': 5,
  'C': 10,
  'D': 10,
  'E': 35,
  'F': 12,
  'G': 6,
  'H': 18,
  'I': 35,
  'K': 1,
  'L': 14,
  'M': 7,
  'N': 30,
  'O': 36,
  'P': 8,
  'R': 34,
  'S': 25,
  'T': 39,
  'U': 8,
  'V': 2,
  'W': 9,
  'X': 1,
  'Y': 6,
  'a': 25,
  'b': 9,
  'c': 16,
  'd': 16,
  'e': 46,
  'f': 15,
  'g': 8,
  'h': 20,
  'i': 43,
  'j': 1,
  'l': 16,
  'm': 8,
  'n': 30,
  'o': 49,
  'p': 11,
  'r': 25,
  's': 33,
  't': 47,
  'u': 12,
  'v': 1,
  'w': 10,
  'y': 6,
}
