tests/snapshots/integration__serde-3.snap
---
source: tests/integration.rs
expression: a
---
{
  'z': 2,
  '7': 1,
  't': 789,
  '1': 2,
  'n': 645,
  'h': 327,
  '%': 1,
  'b': 147,
  'V': 4,
  'P': 15,
  'J': 1,
  'D': 44,
  '8': 1,
  'u': 256,
  '2': 5,
  'o': 778,
  ',': 163,
  'i': 772,
  'c': 324,
  ' ': 2662,
  ']': 3,
  'W': 61,
  'K': 3,
  'E': 61,
  '9': 2,
  'v': 73,
  '3': 1,
  'p': 167,
  '-': 11,
  'j': 9,
  '\'': 1,
  'd': 299,
  '!': 1,
  'X': 2,
  'R': 53,
  'L': 65,
  'F': 22,
  ':': 6,
  'w': 104,
  '4': 2,
  'q': 6,
  '.': 63,
  'k': 65,
  '(': 24,
  'e': 879,
  '"': 44,
  'Y': 42,
  'S': 61,
  'M': 11,
  '
': 216,
  'G': 9,
  'A': 54,
  ';': 6,
  'x': 21,
  '5': 2,
  'r': 612,
  '/': 10,
  'l': 275,
  ')': 24,
  'f': 193,
  'T': 72,
  'N': 67,
  'H': 23,
  'B': 9,
  'y': 158,
  '6': 1,
  's': 483,
  '0': 6,
  'm': 172,
  'g': 130,
  'a': 543,
  '[': 3,
  'U': 18,
  'O': 69,
  'I': 75,
  'C': 47,
}
