tests/snapshots/integration__serde.snap
---
source: tests/integration.rs
expression: a
---
{
  '
': 200,
  ' ': 2515,
  '!': 1,
  '"': 40,
  '%': 1,
  '\'': 1,
  '(': 23,
  ')': 23,
  ',': 141,
  '-': 11,
  '.': 60,
  '/': 9,
  '0': 6,
  '1': 2,
  '2': 5,
  '3': 1,
  '4': 2,
  '5': 2,
  '6': 1,
  '7': 1,
  '8': 1,
  '9': 2,
  ':': 5,
  ';': 6,
  'A': 26,
  'B': 4,
  'C': 37,
  'D': 34,
  'E': 26,
  'F': 10,
  'G': 3,
  'H': 5,
  'I': 40,
  'J': 1,
  'K': 2,
  'L': 51,
  'M': 4,
  'N': 37,
  'O': 33,
  'P': 7,
  'R': 19,
  'S': 36,
  'T': 33,
  'U': 10,
  'V': 2,
  'W': 52,
  'X': 1,
  'Y': 36,
  '[': 3,
  ']': 3,
  'a': 518,
  'b': 138,
  'c': 308,
  'd': 283,
  'e': 833,
  'f': 178,
  'g': 122,
  'h': 307,
  'i': 729,
  'j': 8,
  'k': 65,
  'l': 259,
  'm': 164,
  'n': 615,
  'o': 729,
  'p': 156,
  'q': 6,
  'r': 587,
  's': 450,
  't': 742,
  'u': 244,
  'v': 72,
  'w': 94,
  'x': 21,
  'y': 152,
  'z': 2,
}
